--- a/functions-framework-invoker/pom.xml
+++ b/functions-framework-invoker/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>dev.openfunction.functions</groupId>
     <artifactId>functions-framework-invoker</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>dev.openfunction.functions</groupId>
             <artifactId>functions-framework-api</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.cloudevents</groupId>
