--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>functions-framework-api</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
 </project>
