--- a/samples/src/main/resources/function/http-with-output.yaml
+++ b/samples/src/main/resources/function/http-with-output.yaml
@@ -1,19 +1,12 @@
-apiVersion: core.openfunction.io/v1beta1
+apiVersion: core.openfunction.io/v1beta2
 kind: Function
 metadata:
   name: http-with-output
-  annotations:
-    plugins: |
-      pre:
-      - dev.openfunction.samples.plugins.ExamplePlugin
-      post:
-      - dev.openfunction.samples.plugins.ExamplePlugin
 spec:
   version: "v2.0.0"
   image: "openfunctiondev/http-with-output-java:v1"
   imageCredentials:
     name: push-secret
-  port: 8080 # default to 8080
   build:
     builder: openfunctiondev/builder-java:v2-17
     env:
@@ -28,10 +21,9 @@ spec:
       containers:
         - name: function # DO NOT change this
           imagePullPolicy: IfNotPresent
-    runtime: "knative"
     outputs:
-      - name: sample
-        component: kafka-server
+      - name: kafka-server
+        type: bindings.kafka
         operation: "create"
     bindings:
       kafka-server:
@@ -48,3 +40,8 @@ spec:
             value: "sample-topic"
           - name: authRequired
             value: "false"
+    hooks:
+      post:
+        - dev.openfunction.samples.hooks.ExampleHook
+      pre:
+        - dev.openfunction.samples.hooks.ExampleHook
