--- a/samples/src/main/resources/function/subcreibe-function.yaml
+++ b/samples/src/main/resources/function/subcreibe-function.yaml
@@ -1,12 +1,6 @@
-apiVersion: core.openfunction.io/v1beta1
+apiVersion: core.openfunction.io/v1beta2
 kind: Function
 metadata:
-  annotations:
-    plugins: |
-      pre:
-      - dev.openfunction.samples.plugins.ExamplePlugin
-      post:
-      - dev.openfunction.samples.plugins.ExamplePlugin
   name: autoscaling-subscriber
 spec:
   version: "v2.0.0"
@@ -25,9 +19,15 @@ spec:
       sourceSubPath: "samples"
       revision: "java"
   serving:
-    runtime: "async"
     scaleOptions:
       keda:
+        triggers:
+          - type: kafka
+            metadata:
+              topic: "sample-topic"
+              bootstrapServers: kafka-server-kafka-brokers.default.svc.cluster.local:9092
+              consumerGroup: autoscaling-subscriber
+              lagThreshold: "20"
         scaledObject:
           pollingInterval: 15
           minReplicaCount: 0
@@ -44,21 +44,10 @@ spec:
                       periodSeconds: 15
                 scaleUp:
                   stabilizationWindowSeconds: 0
-    triggers:
-      - type: kafka
-        metadata:
-          topic: "sample-topic"
-          bootstrapServers: kafka-server-kafka-brokers.default.svc.cluster.local:9092
-          consumerGroup: autoscaling-subscriber
-          lagThreshold: "20"
     template:
       containers:
         - name: function # DO NOT change this
           imagePullPolicy: IfNotPresent
-    inputs:
-      - name: producer
-        component: kafka-server
-        topic: "sample-topic"
     pubsub:
       kafka-server:
         type: pubsub.kafka
@@ -72,3 +61,13 @@ spec:
             value: "sample-topic"
           - name: consumerID
             value: "autoscaling-subscriber"
+    triggers:
+      dapr:
+        - name: kafka-server
+          type: bindings.cron
+          topic: "sample-topic"
+    hooks:
+      post:
+        - dev.openfunction.samples.hooks.ExampleHook
+      pre:
+        - dev.openfunction.samples.hooks.ExampleHook
