--- a/functions-framework-invoker/pom.xml
+++ b/functions-framework-invoker/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>dev.openfunction.functions</groupId>
     <artifactId>functions-framework-invoker</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
 
     <properties>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -20,6 +20,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <cloudevents.sdk.version>2.4.2</cloudevents.sdk.version>
+        <skywalking.version>8.16.0</skywalking.version>
     </properties>
 
     <licenses>
@@ -60,7 +61,7 @@
         <dependency>
             <groupId>dev.openfunction.functions</groupId>
             <artifactId>functions-framework-api</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.cloudevents</groupId>
@@ -178,6 +179,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.skywalking</groupId>
+            <artifactId>apm-toolkit-trace</artifactId>
+            <version>${skywalking.version}</version>
         </dependency>
     </dependencies>
 
